<resources>
    <string name="app_name">1000-English words</string>
    <string name="text_prev">1000-Англійських слів - легко!</string>
    <string name="tap_to_start">Розпочати</string>

    <!--menu text-->
    <string name="btn_learning_words">Вчити слова</string>
    <string name="btn_library">Словник</string>
    <string name="btn_selected_words">Вибрані слова</string>
    <string name="enter_text">Введіть англійське слово</string>

    <!-- text error-->
    <string name="not_correct">Не вірно!</string>
    <string name="is_empty">Поле пусте!</string>
    <string name="is_empty_edittext">Поле вводу пусте!</string>

    <!-- text toast-->
    <string name="toast_select">Додайте слова із словника до вибраних!</string>
    <string name="toast_push_message">Трішки зусіль і все вийде)</string>
    <string name="toast_mistakes">У вас немає помилок!</string>
    <string name="toast_mistakes_done">Чудово, Ви справились!</string>
    <string name="toast_free_word">Ви отримали слово безкоштовно!</string>

    <!-- text menu learning -->
    <string name="text_lesson">Уроки</string>
    <string name="learning_select_words">Вчити вибрані слова</string>
    <string name="work_on_mistakes">Робота над помилками</string>

    <!--text learning activity -->
    <string name="btn_checked">Перевірити</string>
    <string name="btn_next">Наступне</string>
    <string name="edit_text_hint">Натисніть кнопку \"Наступне\"</string>
    <string name="text_attempt">/3 спроба</string>
    <string name="text_attempt_string">0/3 спроба</string>

    <!-- hint -->
    <string name="text_prompting">Підсказка</string>
    <string name="text_show_video">Подивитися відео і дізнатися слово?</string>

    <string name="text_yes">Так</string>
    <string name="text_no">Ні</string>
    <!-- text alert dialog select word-->
    <string name="text_delete">Видалити</string>
    <string name="text_delete_all">Видалити всі?</string>

    <!-- text alert dialog select word-->
    <string name="text_title">"Вірні відповіді"</string>
    <string name="text_message">"За урок вірних відповідей %d!"</string>

    <!-- text alert dialog info -->
    <string name="text_title_info">Інформація</string>
    <string name="text_message_info">"Знання англійської мови є невід'ємним елементом сучасної успішної людини!\n\nПриділяйте кожному уроку по 15 хвилин в день і результат можна побачити вже через декілька днів.\n\nДодавайте слова, які Вам не відомі з \"Словника\" до \"Вибраних слів\" та вивчайте їх.\n\nТакож, не забуваєте про \"Роботу над помилками\"!"</string>
    <string name="text_button_info">Добре!</string>

    <!--text hint edit text -->
    <string name="text_enter_ua_ru">Введіть українське/російське слово</string>
    <string name="text_enter_eng">Введіть англійське слово</string>

    <!--text internet connection -->
    <string name="text_internet">ОЙ-Йо-йо!</string>
    <string name="text_internet_connection">Немає підключення до Інтернету</string>
    <string name="text_internet_button">Повторити спробу</string>

    <string name="enFlag">🇺🇸</string>
    <string name="uaFlag">🇺🇦</string>
    <string name="ruFlag">🇷🇺</string>

    <string name="language_en">🇺🇸 Англійська</string>
    <string name="language_ua">🇺🇦 Українська</string>
    <string name="language_ru">🇷🇺 Російська</string>

    <string name="text_num_1">Урок 1\n\nСлова\n 1-100</string>
    <string name="text_num_2">Урок 2\n\nСлова\n100-200</string>
    <string name="text_num_3">Урок 3\n\nСлова\n200-300</string>
    <string name="text_num_4">Урок 4\n\nСлова\n300-400</string>
    <string name="text_num_5">Урок 5\n\nСлова\n400-500</string>
    <string name="text_num_6">Урок 6\n\nСлова\n500-600</string>
    <string name="text_num_7">Урок 7\n\nСлова\n600-700</string>
    <string name="text_num_8">Урок 8\n\nСлова\n700-800</string>
    <string name="text_num_9">Урок 9\n\nСлова\n800-900</string>
    <string name="text_num_10">Урок 10\n\nСлова\n900-1000</string>

    <string-array name="language">
        <item>🇺🇸 Англійська</item>
        <item>🇺🇦 Українська</item>
        <item>🇷🇺 Російська</item>
    </string-array>

    <!--Google adMob key original -->

    <string name="google_main_menu_key">ca-app-pub-6890166018762231/3678862349</string>
    <string name="google_library_key">ca-app-pub-6890166018762231/8739617334</string>
    <string name="google_select_key">ca-app-pub-6890166018762231/7426535669</string>
    <string name="google_learning_menu_key">ca-app-pub-6890166018762231/4460626824</string>
    <string name="google_learning_words_key">ca-app-pub-6890166018762231/6113453992</string>
    <string name="google_hint_key">ca-app-pub-6890166018762231/5131151602</string>

    <!--Google adMob key test -->
    <!-- <string name="google_main_menu_key">ca-app-pub-3940256099942544/6300978111</string>
     <string name="google_library_key">ca-app-pub-3940256099942544/6300978111</string>
     <string name="google_select_key">ca-app-pub-3940256099942544/6300978111</string>
     <string name="google_learning_menu_key">ca-app-pub-3940256099942544/6300978111</string>
     <string name="google_learning_words_key">ca-app-pub-3940256099942544/6300978111</string>
     <string name="google_hint_key">ca-app-pub-3940256099942544/5224354917</string>-->

</resources>