<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/btn_background"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/ic_baseline_signal_wifi_off_24"
        android:layout_gravity="center">
    </ImageView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_internet"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textSize="40sp"
        android:gravity="center"
        android:textColor="@color/white">
    </TextView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/text_internet_connection"
        android:gravity="center">
    </TextView>

    <Button
        android:id="@+id/btnRetry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:textAllCaps="false"
        android:text="@string/text_internet_button"
        android:background="@drawable/btn_style_internet">
    </Button>

</LinearLayout>