<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    tools:context=".MenuActivity">

    <LinearLayout
        android:id="@+id/linerLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="15dp">

        <Button
            android:id="@+id/btn_learningWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/btn_margin_start_and_end"
            android:layout_marginEnd="@dimen/btn_margin_start_and_end"
            android:layout_marginTop="25dp"
            android:text="@string/btn_learning_words"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/btn_style_menu">
        </Button>

        <Button
            android:id="@+id/btn_libraryWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="@dimen/btn_margin_start_and_end"
            android:layout_marginEnd="@dimen/btn_margin_start_and_end"
            android:text="@string/btn_library"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/btn_style_menu">
        </Button>

        <Button
            android:id="@+id/btn_selectedWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="@dimen/btn_margin_start_and_end"
            android:layout_marginEnd="@dimen/btn_margin_start_and_end"
            android:text="@string/btn_selected_words"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:background="@drawable/btn_style_menu">
        </Button>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:boxBackgroundColor="@color/white"
        app:shapeAppearance="@style/Cut"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        android:hint="@string/enter_text"
        android:padding="15dp"
        android:layout_marginStart="@dimen/btn_margin_start_and_end"
        android:layout_marginEnd="@dimen/btn_margin_start_and_end"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linerLayout"
        app:layout_constraintBottom_toTopOf="@id/btn_voice">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/englishText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/btn_voice"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/voice_2"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:background="@color/background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/outlinedTextField"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/google_main_menu_key"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintBottom_toBottomOf="parent">
    </com.google.android.gms.ads.AdView>


</androidx.constraintlayout.widget.ConstraintLayout>