<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".learning_words.MenuLearningWordsActivity">

    <ImageButton
    android:id="@+id/btn_back"
    android:layout_width="@dimen/btn_back"
    android:layout_height="@dimen/btn_back"
    android:layout_marginStart="@dimen/btn_back_margin"
    android:layout_marginTop="@dimen/btn_back_margin"
    android:background="@drawable/btn_style_menu"
    android:padding="10dp"
    android:scaleType="fitCenter"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/arrow_left" />

    <ImageButton
        android:id="@+id/btn_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/info_24"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:layout_marginEnd="@dimen/btn_back_margin"
        android:layout_marginTop="@dimen/btn_back_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textLesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_lesson"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="italic|bold"
        app:layout_constraintBottom_toTopOf="@id/scrollView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back"/>

    <ImageView
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/bookshelf"
        app:layout_constraintBottom_toBottomOf="@id/textLesson"
        app:layout_constraintStart_toEndOf="@id/textLesson"
        app:layout_constraintTop_toTopOf="@id/textLesson"/>

    <HorizontalScrollView
        android:id="@+id/scrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLesson">
    <LinearLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textLesson">

        <Button
            android:id="@+id/les1"
            android:layout_width="@dimen/btn_menu"
            android:layout_height="@dimen/btn_menu"
            android:layout_margin="5dp"
            android:background="@drawable/btn_style_menu"
            android:text="Урок 1\n\nСлова\n 1-100"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_menu"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/les2"
            android:layout_width="@dimen/btn_menu"
            android:layout_height="@dimen/btn_menu"
            android:layout_margin="5dp"
            android:background="@drawable/btn_style_menu"
            android:text="Урок 2\n\nСлова 100-200"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_menu"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/les3"
            android:layout_width="@dimen/btn_menu"
            android:layout_height="@dimen/btn_menu"
            android:layout_margin="5dp"
            android:background="@drawable/btn_style_menu"
            android:text="Урок 3\n\nСлова 200-300"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_menu"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/les4"
            android:layout_width="@dimen/btn_menu"
            android:layout_height="@dimen/btn_menu"
            android:layout_margin="5dp"
            android:background="@drawable/btn_style_menu"
            android:text="Урок 4\n\nСлова 300-400"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_menu"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/les5"
            android:layout_width="@dimen/btn_menu"
            android:layout_height="@dimen/btn_menu"
            android:layout_margin="5dp"
            android:background="@drawable/btn_style_menu"
            android:text="Урок 5\n\nСлова 400-500"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_menu"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/les6"
            android:layout_width="@dimen/btn_menu"
            android:layout_height="@dimen/btn_menu"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_style_menu"
            android:text="Урок 6\n\nСлова 500-600"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_menu"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/les7"
            android:layout_width="@dimen/btn_menu"
            android:layout_height="@dimen/btn_menu"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_style_menu"
            android:text="Урок 7\n\nСлова 600-700"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_menu"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/les8"
            android:layout_width="@dimen/btn_menu"
            android:layout_height="@dimen/btn_menu"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_style_menu"
            android:text="Урок 8\n\nСлова 700-800"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_menu"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/les9"
            android:layout_width="@dimen/btn_menu"
            android:layout_height="@dimen/btn_menu"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_style_menu"
            android:text="Урок 9\n\nСлова 800-900"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_menu"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/les10"
            android:layout_width="@dimen/btn_menu"
            android:layout_height="@dimen/btn_menu"
            android:layout_margin="5dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_style_menu"
            android:text="Урок 10\n\nСлова 900-1000"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size_menu"
            android:textStyle="bold"/>
    </LinearLayout>
    </HorizontalScrollView>


    <Button
        android:id="@+id/btnLearningSelect"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/btn_style_menu"
        android:text="@string/learning_select_words"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scrollView"/>

    <Button
        android:id="@+id/btnWorkMistakes"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_style_menu"
        android:text="@string/work_on_mistakes"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="@id/btnLearningSelect"
        app:layout_constraintStart_toStartOf="@id/btnLearningSelect"
        app:layout_constraintTop_toBottomOf="@id/btnLearningSelect"/>

    <ImageButton
        android:id="@+id/btn1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_style_menu"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/lock"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="@id/btnWorkMistakes"
        app:layout_constraintStart_toStartOf="@id/btnWorkMistakes"
        app:layout_constraintTop_toBottomOf="@id/btnWorkMistakes"/>

    <ImageButton
        android:id="@+id/btn2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/btn_style_menu"
        android:padding="10dp"
        android:scaleType="fitCenter"
        android:src="@drawable/lock"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="@id/btnWorkMistakes"
        app:layout_constraintStart_toStartOf="@id/btnWorkMistakes"
        app:layout_constraintTop_toBottomOf="@id/btn1"/>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/google_learning_menu_key"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>